# SubtitleOCR

./: .gitignore  README.en.md  README.md  README.python.md  config.json  custom.md  download_models.py  launch_gui.py  requirements.txt
subocr/: __init__.py  caption_merger.py  defines.py  detector.py  gui.py  gui_locale.py  pipeline.py  recognizer.py  video_reader.py
subocr-swiftui/: privacy.README.md  privacy.md
subocr-swiftui/subocr-macos/: ContentView_back.swift  subocr_macosApp.swift
subocr-swiftui/subocr-macos.xcodeproj/: project.pbxproj
subocr-swiftui/subocr-macos/debug/: BatchView.swift  DebugDecoderView.swift  DebugView.swift
subocr-swiftui/subocr-macos/views/: AnchorView.swift  ContentView.swift  MainView.swift  SubViews.swift  SubtitleView.swift
subocr-tauri-ui/: package.json  subocr-tauri-ui.code-workspace
subocr-tauri-ui/src/: App.tsx  MainView.css  MainView.tsx  ResizeTest.tsx  SplitViewTest.tsx  WaitingView.tsx  main.tsx  protocol.ts  utils.tsx
subocr-tauri-ui/src-tauri/: Cargo.toml  build.rs  build_subocr.back.sh  build_subocr_macos.sh  interface.h  tauri.conf.json  tauri.conf.json.back
subocr-tauri-ui/src-tauri/bindings/: CVColor.ts  RustSubtitle.ts  SetVideoResponse.ts  SubtitleAnchor.ts
subocr-tauri-ui/src-tauri/capabilities/: default.json
subocr-tauri-ui/src-tauri/icons/: icon.icns
subocr-tauri-ui/src-tauri/src/: lib.rs  main.rs  subocr_abi.rs  tmp.rs
test/: detector_test.py  pipeline_test.py  ppocr_detector_test.py  ppocr_recognizer_test.py  recognizer_test.py  video_reader_test.py
(+8 files in other folders)
